chore: second week section is introduced.

--- a/references.bib
+++ b/references.bib
@@ -79,13 +79,34 @@
     pages = {186--190}
 }
 
-@inbook{dia,
+@inbook{dia_1,
     author = {Filiz Gündüz},
     title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
     publisher = {Türkiye Diyanet Vakfı},
     year = {2007},
     chapter = {Osman Hamdi Bey},
+    volume = {33},
     pages = {468--469}
+}
+
+@inbook{dia_2,
+    author = {Nazan Ölçer},
+    title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
+    publisher = {Türkiye Diyanet Vakfı},
+    year = {2012},
+    chapter = {Türk ve İslam Eserleri Müzesi},
+    volume = {41},
+    pages = {543--544}
+}
+
+@inbook{dia_3,
+    author = {Semavi Eyice},
+    title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
+    publisher = {Türkiye Diyanet Vakfı},
+    year = {2000},
+    chapter = {Türk ve İslam Eserleri Müzesi},
+    volume = {21},
+    pages = {345--347}
 }
 
 @inbook{shaw,
@@ -95,4 +116,42 @@
     edition={3},
     year = {2020},
     translator = {Esin Soğancılar}
+}
+
+@inbook{atasoy_1,
+    author = {Nurhan Atasoy},
+    title = {İbrahim Paşa Sarayı},
+    publisher = {T.C. Kültür Ve Turizm Bakanlığı Yayınları},
+    edition={2},
+    year = {2017},
+    pages = {51}
+}
+
+@inbook{atasoy_2,
+    author = {Nurhan Atasoy},
+    title = {İbrahim Paşa Sarayı},
+    publisher = {T.C. Kültür Ve Turizm Bakanlığı Yayınları},
+    edition={2},
+    year = {2017},
+    pages = {109--124}
+}
+
+@inbook{dia_4,
+    author = {Saadettin Ünal},
+    title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
+    publisher = {Türkiye Diyanet Vakfı},
+    year = {2001},
+    chapter = {Kabe},
+    volume = {24},
+    pages = {14--21}
+}
+
+@inbook{dia_5,
+    author = {Zeynep Hatice Kurtbil},
+    title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
+    publisher = {Türkiye Diyanet Vakfı},
+    year = {2012},
+    chapter = {Cizre Ulucamii},
+    volume = {42},
+    pages = {90--91}
 }
