--- a/sections/first_week/subsections/osman_hamdi_bey.tex
+++ b/sections/first_week/subsections/osman_hamdi_bey.tex
@@ -1,3 +1,3 @@
 \subsection{Osman Hamdi Bey}
 \indent\indent Modern anlamda ilk müzecilik girişimin Osman Hamdi Bey ortaya atmıştır. Osman Hamdi Bey, 10 Aralık 1842'de İstanbul'da doğmuştur. Babası İbrahim Edhem Paşa, 5 Şubat 1877-11 Ocak 1878 tarihleri arasında sadrazamlık görevini ifa etmiştir. Osman Hamdi Bey, 1856'da Mekteb-i Ma\^{a}rif-i Adliyye'ye kayıt olmuş ve bir sene sonra hukuk tahsili için Paris'e gitmiştir. Paris'teki eğitimi sırasında, Paris Güzel Sanatlar Yüksek Okulu'nda resim dersleri aldı. 1858'de çıktığı Viyana ve Belgrad gezilerinde, bu şehirlerdeki müzeleri ve sergileri inceleme fırsatı buldu. 12 senelik Paris macerasını, 1869'da yurda dönerek sona erdirdi. Dönemin Bağdat Valisi Mithat Paşa kendisine Vil\^{a}yet-i Um\^{u}r-ı Ecnebiyye(Vilayet Yabancı İşleri) müdürlüğünü teklif etti. Görevi kabul eden Osman Hamdi Bey Bağdat'a gitti. 1871'de İstanbul'a geri dönen Osman Hamdi Bey, 1875'te Hariciye Um\^{u}r-ı Ecnebiyye k\^{a}tibi oldu. 1877'de Beyoğlu Belediyes Altıncı D\^{a}ire Müdürlüğüne getirildi. 1877-78 Osmanlı-Rus Savaşı sonrası memurluktan ayrılarak zamanını resme ayırdı. Müze-i Hümay\^{u}n'un müdürü Philipp Anton Dethier'in vefatı üzerine 1881'de müzenin müdürlüğüne atandı.\newline
-\indent Müdürlük görevi ile Osman Hamdi Bey Osmanlı müzeciliğine yeni bir soluk getirdi. Yeni bir müze yapılması için çalışmalara başladı. Günümüzde İstanbul Arkeoloji Müzesi olan binanın ilk kısmının yapımı 1891'de tamamlandı. Bu bina kazılarda bulunan eserleri himaye etmeye yetmeyince, 1903'te ikinci kısmın, 1907'de de üçüncü kısmın inşası tamamlandı. Vefat ettiği 1910 yılına kadar müdürlük görevini sürdürdü. Müdürlüğü esnasında arkeolojik kazıları teşvik ve birçoğuna bizzat kendisi katıldı. Katıldığı kazılar arasında Sayda, Nemdur Dağı, Rodos, Taşoz gibi önemli kazılar da bulunmakta.\cite{dia}
+\indent Müdürlük görevi ile Osman Hamdi Bey Osmanlı müzeciliğine yeni bir soluk getirdi. Yeni bir müze yapılması için çalışmalara başladı. Günümüzde İstanbul Arkeoloji Müzesi olan binanın ilk kısmının yapımı 1891'de tamamlandı. Bu bina kazılarda bulunan eserleri himaye etmeye yetmeyince, 1903'te ikinci kısmın, 1907'de de üçüncü kısmın inşası tamamlandı. Vefat ettiği 1910 yılına kadar müdürlük görevini sürdürdü. Müdürlüğü esnasında arkeolojik kazıları teşvik ve birçoğuna bizzat kendisi katıldı. Katıldığı kazılar arasında Sayda, Nemdur Dağı, Rodos, Taşoz gibi önemli kazılar da bulunmakta.\cite{dia_1}
