--- a/references.bib
+++ b/references.bib
@@ -155,3 +155,13 @@
     volume = {42},
     pages = {90--91}
 }
+
+@inbook{dia_6,
+    author = {Aynur Durukan},
+    title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
+    publisher = {Türkiye Diyanet Vakfı},
+    year = {2000},
+    chapter = {İbrâhim Bey İmareti ve Kümbeti},
+    volume = {21},
+    pages = {131--132}
+}
