--- a/sections/second_week/subsections/tour.tex
+++ b/sections/second_week/subsections/tour.tex
@@ -2,7 +2,7 @@
 \indent\indent Türk İslam Müzesi, adından da anlaşılacağı gibi ağırlıklı olarak Türk ve İslam eserlerinin sergilendiği bir müze. Müze, 2012-2014 yılları arasında geçirdiği restorasyondan sonra günümüzdeki halini almıştır. Müzedeki eseler, ait oldukları dönemlere göre tasnif edilmiş ve ayrı odalarda sergilenmektedir. Sırasıyla Abbasiler, Emeviler, Büyük Selçuklular, İlhanlılar, Timurlular, Memlûkler, Safeviler, Kaçarlar, Anadolu Selçuklular ve Osmanlılar dönemlerinden kalan eserler bulunmaktadır. Müzede öne çıkan eserler arasında el yazmaları, halı ve kilimler, Kutsal Emanetler ve şamdanlar ön plana çıkmatadır.
 \subsubsection{Lahitler ve Kitabeler}
 \indent\indent Müzenin girişinde iki mermer lahit bulunmakta(Şekil \ref{fig:lahit}). Bu lahitler Memlûk Halep Valisi Özdemir ve eşinini mezarları için tasalanmış olup, 1493 yılına aittir. Lahitler, ya mezarın üstüne ya da yakınına konuşlandırılan ve mezar taşı görevi taşıyan yapılardır. Yaygın kanının aksine içinde naaşı muhafaza etmemektedir.\newline
-\indent Bu kısmı geçip, soldaki kapıdan devam edince karşımıza iki tane kitabe çıkıyor. Şekil \ref{fig:grave}'deki kitabe , Emeviler döneminden bir mescide aittir. Şekil \ref{fig:road_stone}'deki kitabe  ise bir mesafe taşıdır. Bu kitabe, günümüzde kilometre tabelalarının Emeviler dönemindeki eşleniğidir. Mesefa taşı kitabesi, en geç 705 yılına aittir.\newpage
+\indent Bu kısmı geçip, soldaki kapıdan devam edince karşımıza iki tane kitabe çıkıyor. Şekil \ref{fig:grave}'deki kitabe , Emeviler döneminden bir mescide aittir. Şekil \ref{fig:road_stone}'deki kitabe  ise bir mesafe taşıdır. Bu kitabe, günümüzde kilometre tabelalarının Emeviler dönemindeki eşleniğidir. Mesefa taşı kitabesi, en geç 705 yılına aittir.\newline
 \begin{figure}[ht]
     \centering
     \subfigure[Özdemir ve Eşinin Lahitleri]{
@@ -38,19 +38,18 @@
 \indent\indent Müzede, 2500 civarında yazma eser bulunmaktadır. Bundan dolayı, en ön plana çıkan eserler bu yazmalardır. El yazmaları, ağırlıklı olarak Kur'an-ı Kerim, cüz ve mecmua tarzı eserleri ihtiva etmektedir.\newline
 \indent Müzede Emevi, Memlûk, İlhanlı, Timur, Safevi ve Kaçar dönemlerine ait el yazması Kur'an-ı Kerim ve cüz eserler dönemlerine göre ayrı odalarda tasnif edilmiş halde sergilenmektedir. Bu eserlerden Emevi dönemi el yazması Kur'an-ı Kerim büyüklüğü ile ilgi çekicidir. İlhanlı dönemine ait Kur'an-ı Kerim'de ise tefsir çalışması mevcuttur. Tefsir, satırların altına kırmızı kalem ile işlenmiştir. Memlûk ve Safevi el yazmalarında tezhip(Arapça \textit{zeheb(altın)} kelimesinden altınlamak anlamında) sanatının nadide işçiliği gözlemlenebilir. Şam Emevi Camii'nden 1917 yılında getirilerek, Şam Evrakı koleksiyonu şeklinde sergilenen eserler arasında parşömen üzerine Kur'an sayfaları 846 gibi erken bir tarihe uzanmakta ve İslâm sanatının ilk örneklerini ouşturmaktır. Şam Evrakı Koleksiyonunda Kur'ân yapraklarının yanı sıra, 8. yüzyıl sonundan 19. yüzyıla kadar uzanan bir periyodda yazılmış ciltler ve belgelere de bulunmaktadır.\newline
 \indent Kur'an-ı Kerim ve cüz eserlerin yanı sıra az sayıda mecmua eserler de el yazması eserler arasında bulunmaktadır. Bu eserler arasinda Timur döneminden Hamse-i Attar(beş mesneviden oluşan külliyat) ve Memlûk döneminden Kitab-ı Buzuğ El Hilal adında bir mecmua dikkat çekmektedir.
-\begin{figure}[th]
+\begin{figure}[H]
     \centering
     \subfigure[Hamse-i Attar]{
         \includegraphics[height=0.2\textheight, width=0.45\linewidth]{assets/hamsei_attar.jpg}
-        \label{fig:hamse}
     }
     \hfill
     \subfigure[Kitab-ı Buzuğ El Hilal]{
         \includegraphics[height=0.2\textheight, width=0.45\linewidth]{assets/kitabi_buzug_el_hilal.jpg}
-        \label{fig:buzug}
     }
+    \caption{El Yazması Mecmua Eserler}
 \end{figure}
-\begin{figure}[!ht]
+\begin{figure}[H]
     \centering
     \subfigure[İlhanlı Dönemi Kur'an Kerim ve Tefsir Çalışması]{
         \includegraphics[width=0.9\linewidth]{assets/ilhanli_kuran_tefsir.jpg}
@@ -79,39 +78,34 @@
     \label{fig:quran}
 \end{figure}
 \subsubsection{Kutsal Emanetler}
-\begin{wrapfigure}{r}{0.4\textwidth}
-    \includegraphics[width=0.4\textwidth]{assets/kabe.jpg}
+\begin{wrapfigure}{r}{0.25\textwidth}
+    \centering
+    \includegraphics[width=0.20\textwidth]{assets/kabe.jpg}
     \caption{Kabe Örtüsü}
     \label{fig:kabe}
 \end{wrapfigure}
 \indent\indent Müzede, kutsal emanetler için ayrı bir bölüm oluşturulmuş. Burada dikkat çeken eserlerin başında Kâbe örtüsü bulunmaktadır. Hz. Ömer zamanında başlayan bir gelenek olarak Kâbe örtüsü masrafları devlet hazinesinden karşılanıyordu. Memlûk sultanları döneminde bu örtünün dokunması Mısır'da yapılmaya başlandı. 1517 yılında Yavuz Sultan Selim Mısır'ı fethendice, eski usûle bağlı kalarak örtünün Mısır'da dokunmasını buyurdu. Kanuni Sultan Süleyman zamanında dış örtünün Mısır'da, iç örtünün ise İstanbul'da dokunması kararlaştırıldı. III. Ahmed döneminden itibaren hem iç, hem de dış örtü İstanbul'da dokunmaya başlandı. Sultan Abdülaziz'in 1861'de tahta çıkması münasebetiyle gönderilen örtü, 1943 yılına kadar kullanıldı. I. Dünya Savaşı sırasında bölgenin Osmanlı Devleti'ne ayaklanması ile örtülerin dokuması Mısır'da yapılmaya başlanmıştır. 1962 yılından itibaren örtülern dokuması Mekke'de kurulmuş fabrikada yapılmaktadır.\cite{dia_4}\newline
 \indent Bu kısımdaki bir diğer ilgi çekici eser ise hac vekaletnameleridir. Günümüzde de uygulanmaya devam eden vekalet ile hac uygulaması, geçmişte daha sık başvurulan yöntemdi. Hac yapmakla mükellef kişi bir sağlık sorunu, yaşlılık gibi sebeplerden dolayı bir kişiyi vekil olarak gönderebilmektedir. İşte bu vekilliği belgeyen vekaletnamelerin nüshaları burada incelenebilmektedir.\newline
 \indent İç kısımda ise el yazmaları bulunmaktadır. Burada el yazması Kur'ân-ı Kerimlerden bir tanesinin Hz. Osman döneminde, bir diğerinin ise Hz. Ali döneminde yazıldığı rivayet edilmektedir. Yine Aşere-i Mübeşşere'nin(Hz. Muhammed tarafından cennetle müjdelenen on kişi) isimlerinin yazılı olduğu örtü de bu alanda sergilenmektedir. Bunların dışında eski bir Kâbe kapısı kilidi ve Kâbe mührü gibi eserler de burada görülebilir.
-\newpage
-\begin{figure}[th]
+\begin{figure}[H]
     \centering
     \subfigure[Hz. Osman Dönemi Kur'ân-ı Kerim]{
         \includegraphics[height=0.2\textheight, width=0.45\linewidth]{assets/osman.jpg}
-        \label{fig:osman}
     }
     \hfill
     \subfigure[Hz. Ali Dönemi Kur'ân-ı Kerim]{
         \includegraphics[height=0.2\textheight, width=0.45\linewidth]{assets/ali.jpg}
-        \label{fig:ali}
     }
+    \caption{Halife Dönemi El Yazması Kur'ân-ı Kerimler}
 \end{figure}
 \subsubsection{Diğer Eserler}
-\begin{wrapfigure}{r}{0.25\textwidth}
-    \includegraphics[width=0.25\textwidth]{assets/cizre.jpg}
-    \caption{Cizre Ulucamii Kapısı}
-    \label{fig:cizre}
-    \vspace{10pt}
-    \includegraphics[width=0.25\textwidth]{assets/tokmak.jpg}
-    \caption{Cizre Ulucamii Kapı Tokmağı}
-    \label{fig:tokmak}
+\begin{wrapfigure}{r}{0.3\textwidth}
+    \centering
+    \includegraphics[width=0.3\textwidth]{assets/cizre.jpg}
+    \caption{Ulucamii Kapısı}
 \end{wrapfigure}
 \indent\indent Müzede dikkat çeken bir başka eser ise Cizre Ulucamii kapısıdır. Cizre Ulucamii, Abbasiler döneminde kiliseden camiiye çevrilmiş ve tamir edilmiştir. Artuklular döneminde(1160) yeniden inşa ettirilmiştir. Kapıları 1946 yılında onarılmış ve yapı 2007 yılında Vakıflar Genel Müdürlüğü tarafından restore edilmiştir. Cizre Ulucamii'nin en dikkat çekici unsuru bronzdan yapılmış kapısı ve tokmaklarıdır. Tokmaklar, iki ejderin arasında bir aslan başı şeklinde tasarlanmıştır. Tokmaklardan biri, 1969 yılında yurt dışına kaçırılmıştır.\cite{dia_5}\newline
-\indent Müzede, çeşitli dönemlere ait şamdanlar, buhurdanlıklar, yağdanlıklar, seramik eşyalar, keşküller(yarımküre biçiminde bir tür tas), erken dönem astronomik aletler de bulunmakta. Büyük Selçuklular dönemine ait tabure, matara ve reçellikler, yıllar geçse de insanların ihtiyaçlarının aşağı yukarı aynı kaldığını gösteriyor bizlere. Yine aynı galeride bulunan Selçuklu seramik yıldızının örnekleri, Konya Karatay Medresesi Müzesi'nde de bolca bulunmaktadır. Bir diğer ilginç eser ise Kaçar döneminden kalma lakeden yapılmış oyun kartları ve kalemliklerdir. Oyun kartları, Antik Mısır'da oynanan /textit{Senet} oyununun bir benzeri gibi durmaktadır. Fakat aradaki yaklaşık 5000 yıllık zaman farkını düşününce, bu ihtimal çok ufaktır.
+\indent Müzede, çeşitli dönemlere ait şamdanlar, buhurdanlıklar, yağdanlıklar, seramik eşyalar, keşküller(yarımküre biçiminde bir tür tas), erken dönem astronomik aletler de bulunmakta. Büyük Selçuklular dönemine ait tabure, matara ve reçellikler, yıllar geçse de insanların ihtiyaçlarının aşağı yukarı aynı kaldığını gösteriyor bizlere. Yine aynı galeride bulunan Selçuklu seramik yıldızının örnekleri, Konya Karatay Medresesi Müzesi'nde de bolca bulunmaktadır. Bir diğer ilginç eser ise Kaçar döneminden kalma lakeden yapılmış oyun kartları ve kalemliklerdir. Oyun kartları, Antik Mısır'da oynanan \textit{Senet} oyununun bir benzeri gibi durmaktadır. Fakat aradaki yaklaşık 5000 yıllık zaman farkını düşününce, bu ihtimal çok ufaktır.
 \newpage
 \clearpage
 \begin{figure}[!ht]
