--- a/sections/second_week/second_week.tex
+++ b/sections/second_week/second_week.tex
@@ -1,3 +1,4 @@
 \section{İkinci Hafta}
+\indent\indent Müze uzmanlarından Tarık Akar tarafından müzenin üst katındaki sergi alanları gezilip, müzede sergilenen eserler hakkında bilgi verildi.\newpage
 \input{sections/second_week/subsections/museum}
 \input{sections/second_week/subsections/tour}
